@@ -1,5 +1,9 @@
 Changes for DateTime::Set
 
+- DateTime::Span uses DateTime infinity constants; 
+  max and min now return DateTime::Infinite::Future/Past objects.
+  Docs update to explain 'max()' value when a span is built using 'before'.
+
 - added method set_time_zone()
 - clone() is documented
 
